clusters/cl01tl/manifests/argocd/HTTPRoute-http-route-argocd.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-argocd
  namespace: argocd
  labels:
    app.kubernetes.io/name: http-route-argocd
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/part-of: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - argocd.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: argocd-server
          port: 80
          weight: 100
